# AI-Documentation-Assistant

./: .gitignore  README.md  dochelper_ingestion.py  main.py  package.txt  pyproject.toml
chroma_db/: chroma.sqlite3
doc_helper_backend/: core.py
